navigator.share: Reject with TypeError if invalid url.

This is a spec compliance issue. Previously just succeeded with an empty
URL.

Bug: 734486
Change-Id: I8df989646227e9a75d8aaf807bf818ff971b878d
Reviewed-on: https://chromium-review.googlesource.com/538385
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480756}